[package]
name = "rbcp"
version = "0.1.0"
edition = "2021"
description = "A study companion for the rust book and csapp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
rand = "0.8.5"
